@@ -1,6 +1,7 @@
 === qitensor-0.12dev (Dan Stahlke, ongoing) ===
 	* HilbertArray.fidelity
 	* HilbertSpace.random_povm_element
+	* experimental: non-commutative graphs
 
 === qitensor-0.11 (Dan Stahlke, 2013-05-11) ===
 	* superoperators module
